--- a/3-Activity-Intro-Skills.Rmd
+++ b/3-Activity-Intro-Skills.Rmd
@@ -68,7 +68,7 @@ Be sure your code outputs the tibble.
 
 ## Problem 6
 
-Take the tibble from problem 5. Create a new column that is the Range of the PET (max PET - min PET). Then get rid of the max RBI and min RBI columns so the tibble just has columns for State, mean PET, and PET range.
+Take the tibble from problem 5. Create a new column that is the Range of the PET (max PET - min PET). Then get rid of the max PET and min PET columns so the tibble just has columns for State, mean PET, and PET range.
 
 Be sure your code outputs the tibble.
 
