self contained html

--- a/03-Activity-Intro-Skills.Rmd
+++ b/03-Activity-Intro-Skills.Rmd
@@ -1,3 +1,10 @@
+---
+title: "Intro Skills Activity"
+format:
+  html: 
+    self-contained: true
+---
+
 # Intro Skills Activity {#introactivity}
 ## Problem 1
 
