--- a/03-Activity-Intro-Skills.qmd
+++ b/03-Activity-Intro-Skills.qmd
@@ -20,7 +20,7 @@ execute:
   enabled: true
 ---
 
-# Intro Skills Activity {#introactivity}
+# Intro Skills Activity
 ## Problem 1
 
 Load the tidyverse and lubridate libraries.
